# cywad

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  openapi.yaml
cywad-core/: Cargo.toml
cywad-core/src/: lib.rs
cywad-devtools/: Cargo.toml
cywad-devtools/src/: lib.rs
cywad-server/: Cargo.toml
cywad-server/src/: lib.rs
cywad-webkit/: Cargo.toml
cywad-webkit/src/: lib.rs
cywad-widget/: Cargo.toml
cywad-widget/src/: lib.rs
cywad-yew/: Cargo.toml  README.md  index.html
cywad-yew/src/: bindings.rs  item_card.rs  main.rs  screenshot_modal.rs  sse.js  widget_form.rs
misc/: github-rust.toml
src/: core.rs  engine.rs  lib.rs  main.rs  server.rs  widget.rs
src/engine/: devtools.rs  mod.rs  traits.rs  webkit.rs
tests/: lib.rs
tests/data/: index.html
