[package]
name = "cywad"
version = "0.2.0"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
publish = false
edition = "2018"

[workspace]
members = [
  "cywad-core",
  "cywad-webkit",
  "cywad-devtools",
  "cywad-server",
  "cywad-widget",
]

[lib]
name = "cywad"
path = "src/lib.rs"
test = false
doc = false
doctest = false

[[bin]]
name = "cywad"
path = "src/main.rs"
test = false
doc = false
doctest = false


[features]
default = []
webkit = ["cywad-webkit"]
devtools = ["cywad-devtools" ]
server = ["cywad-server"]
png_widget = ["cywad-server/png_widget"]

[dependencies]

cfg-if = "0.1.10"
log = "0.4.11"
env_logger = "0.7.1"
anyhow = "1.0"
clap = "2.33.3"
toml = "0.5.6"
base64 = "0.10.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
chrono = { version = "0.4.6", features = ["serde"]}

cywad-core = { path = "./cywad-core" }
cywad-webkit = { path = "./cywad-webkit", optional = true }
cywad-devtools = { path = "./cywad-devtools", optional = true }
cywad-server = { path = "./cywad-server", optional = true }


[dev-dependencies]
lazy_static = "1.1.0"
actix-rt = { version = "1.1.1" }
futures = { version = "0.3.5" }
futures-util = { version = "0.3.5" }
tokio = { version = "0.2.22" }
actix = { version = "0.10.0" }
actix-web = { version = "3.0.2" } 
actix-service = { version = "1.0.6" }
actix-web-actors = { version = "3.0.0" } 
actix-codec = { version = "0.3.0" }
actix-utils = { version = "2.0.0" }
awc = { version = "2.0.0"}
cron = { version = "0.6.1" }
bytes = { version = "0.5.6" }
actix-cors = { version = "0.3.0" } 
actix-files = { version = "0.3.0" }
