[package]
name = "cywad-server"
version = "0.1.0"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
png_widget = ["cywad-widget"] 

[dependencies]
cywad-core = { path = "../cywad-core", features = ["server"] }
cywad-widget = { path = "../cywad-widget", optional=true }

cfg-if = "0.1.10"
log = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.8"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

slug = "0.1.4"
base64 = "0.10.0"
chrono = { version = "0.4.6", features = ["serde"]}

# devtools + server
futures = { version = "0.3.5" }
futures-util = { version = "0.3.5" }
tokio = { version = "0.2.22" }
actix = { version = "0.10.0" }
actix-web = { version = "3.0.2" } 
actix-service = { version = "1.0.6" }
actix-web-actors = { version = "3.0.0" } 
actix-codec = { version = "0.3.0" }
actix-utils = { version = "2.0.0" }
awc = { version = "2.0.0"}

# server
cron = { version = "0.6.1" }
bytes = { version = "0.5.6" }
actix-cors = { version = "0.3.0" } 
actix-files = { version = "0.3.0" }

http = { version = "0.2.1" }
regex = { version = "1.3.9" }  

hex = { version = "0.4.2" }
