[package]
name = "cywad-yew"
version = "0.1.0"
edition = "2018"
description = "CYWAD frontend"
readme = "README.md"
license = "MIT"
keywords = ["cywad", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.69"
anyhow = "1.0"

chrono = { version = "0.4.6", features = ["serde", "wasmbind"]}
cywad-core = { path = "../cywad-core", features = ["server"] }

log = "0.4.6"
wasm-logger = "0.2.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
